Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
6.2.2, 6.3.0 Feature Freeze
-
None
-
4a948e04ce3c05a48390e5f2bb3d43ed194df729 (qt/qtinterfaceframework/dev) c89f5e7d9355215492a568e1f0064292439f42d7 (qt/qtinterfaceframework/6.2)
Description
/home/qt/work/qt/qtinterfaceframework/src/plugins/ifmedia/media_simulator/mediaplayerbackend.cpp agent:2021/11/08 06:59:34 build.go:394: In file included from /home/qt/work/install/include/QtCore/qobjectdefs.h:49, agent:2021/11/08 06:59:34 build.go:394: from /home/qt/work/install/include/QtCore/qobject.h:46, agent:2021/11/08 06:59:34 build.go:394: from /home/qt/work/install/include/QtCore/qsharedpointer_impl.h:65, agent:2021/11/08 06:59:34 build.go:394: from /home/qt/work/install/include/QtCore/qsharedpointer.h:48, agent:2021/11/08 06:59:34 build.go:394: from /home/qt/work/install/include/QtCore/qdebug.h:52, agent:2021/11/08 06:59:34 build.go:394: from /home/qt/work/install/include/QtCore/qloggingcategory.h:44, agent:2021/11/08 06:59:34 build.go:394: from /home/qt/work/install/include/QtCore/QLoggingCategory:1, agent:2021/11/08 06:59:34 build.go:394: from /home/qt/work/qt/qtinterfaceframework/src/plugins/ifmedia/media_simulator/logging.h:45, agent:2021/11/08 06:59:34 build.go:394: from /home/qt/work/qt/qtinterfaceframework/src/plugins/ifmedia/media_simulator/mediaplayerbackend.cpp:42: agent:2021/11/08 06:59:34 build.go:394: /home/qt/work/install/include/QtCore/qobjectdefs_impl.h: In instantiation of ‘struct QtPrivate::AreArgumentsCompatible<float, int>’: agent:2021/11/08 06:59:34 build.go:394: /home/qt/work/install/include/QtCore/qobjectdefs_impl.h:316:21: required from ‘struct QtPrivate::CheckCompatibleArguments<QtPrivate::List<float>, QtPrivate::List<int> >’ agent:2021/11/08 06:59:34 build.go:394: /home/qt/work/install/include/QtCore/qobject.h:230:123: required from ‘static QMetaObject::Connection QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, const typename QtPrivate::FunctionPointer<Func2>::Object*, Func2, Qt::ConnectionType) [with Func1 = void (QAudioOutput::*)(float); Func2 = void (QIfMediaPlayerBackendInterface::*)(int); typename QtPrivate::FunctionPointer<Func>::Object = QAudioOutput; typename QtPrivate::FunctionPointer<Func2>::Object = QIfMediaPlayerBackendInterface]’ agent:2021/11/08 06:59:34 build.go:394: /home/qt/work/qt/qtinterfaceframework/src/plugins/ifmedia/media_simulator/mediaplayerbackend.cpp:77:53: required from here agent:2021/11/08 06:59:34 build.go:394: /home/qt/work/install/include/QtCore/qobjectdefs_impl.h:299:64: error: static assertion failed: Signal and slot arguments are not compatible (narrowing) agent:2021/11/08 06:59:34 build.go:394: 299 | static_assert(AreArgumentsConvertibleWithoutNarrowing::value, "Signal and slot arguments are not compatible (narrowing)"); agent:2021/11/08 06:59:34 build.go:394: | ^~~~~
Details: https://testresults.qt.io/coin/integration/qt/qtinterfaceframework/tasks/1636354641
Changes: https://codereview.qt-project.org/c/qt/qtinterfaceframework/+/380308