Fix narrowing issue in direct signal connection

Fixes: QTBUG-98052
Change-Id: I8133570c8e268898f2040dcb799ac7aa61a8d0f3
Reviewed-by: Robert Griebl <robert.griebl@qt.io>
(cherry picked from commit 4a948e04ce3c05a48390e5f2bb3d43ed194df729)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>